--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.50
+	- Add support for asynchronous queries. [GSM]
 	- Make minimum supported server 7.4. [GSM]
 	- Add private_attribute_info() method. [GSM]
 	- Add SQL_INTERVAL and others to types.c [GSM]
