Catch lack of libpq libraries when compiling.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO: 
 
+- Catch no -lpq when compiling early and complain loudly.
 - Use WITH HOLD for cursor work
 - Start testing with a thread-enabled Perl.
 - Add array OID types
