--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.50
+	- Add support for arrays: can pass in arrayrefs to execute, and 
+		they are automatically returned as arrays when fetching. [GSM]
+	- Overhauled the data type system. [GSM]
     - Fix bug in last_insert_id. (CPAN bug #15918) [orentocy@gmail.com]
 	- Complain loudly and fail to proceed if Makefile.PL finds no -lpq [GSM]
 	- Fix META.yml file. (CPAN bug #25759) [GSM]
