--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 2.0.0
-	- Change versioning system to three numbered system.
+	- Change versioning system to three numbered system, use version.pm.
 	- Add support for arrays: can pass in arrayrefs to execute, and 
 		they are automatically returned as arrays when fetching. [GSM]
 	- Overhauled the data type system. [GSM]
