--- a/TODO
+++ b/TODO
@@ -15,3 +15,4 @@ TODO:
 - Allow user callbacks to quote user-defined types?
 - Rename functions and add defines to avoid problems with static linking of multi DBDs
 - Move to the Module::Build system
+- Remove libpq dependency
