--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 2.0.0
+	- Use unsigned chars when parsing passed-in queries, preventing UTF-8 
+		strings from ruining the prepare. UTF-16 may still cause problems.
+		(CPAN bug #31577) [GSM]
 	- Fix crash when executing query with two placeholders side by side.
       Thanks to Daniel Browning for spotting this. [GSM]
 	- Fix bad PG_INTEGER example in docs, thanks to Xavi Drudis Ferran.
