Fix for bug #30924: change of sequence name causes last_insert_id to fail. Use adbin instead of adsrc within the main function, not the use of pg_cache in the docs, add specific tests for this bug, and add a few items to the relation drops inside of 01setup.t

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 2.0.0
+	- Use adbin, not adsrc, when figuring out the sequence name for the 
+		last_insert_id() method. This allows the function to work properly 
+		if the sequence name is changed. Not that {pg_cache=>0} should be 
+		passed to the function if you expect this might happen.
+		(CPAN bug #30924) [GSM]
 	- Use unsigned chars when parsing passed-in queries, preventing UTF-8 
 		strings from ruining the prepare. UTF-16 may still cause problems.
 		(CPAN bug #31577) [GSM]
