--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ TODO:
 - Play nicely with standard_confirming_strings (CPAN bug #27538)
 - Use WITH HOLD for cursor work
 - Start testing with a thread-enabled Perl.
-- Suport for bind_param_inout
+- Support for bind_param_inout
 - Support for new error protocol
 - Support new DBI trace scheme.
 - Create a .ppm for Windows
