--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 TODO: 
 
 - Play nicely with standard_confirming_strings (CPAN bug #27538)
+- Update pg_getline and remove the size requirement
 - Use WITH HOLD for cursor work
-- Start testing with a thread-enabled Perl.
-- Support for bind_param_inout
+- Start testing with a thread-enabled Perl
 - Support for new error protocol
-- Support new DBI trace scheme.
+- Support new DBI trace scheme
 - Create a .ppm for Windows
 - Change quote and dequote functions to take Sv instead of string so that
    things like arrays can be serialized by the quote function.  This will
