Try really hard to find a database connection when testing. Drop everything at the end of each test, and do a CASCADE for the final schema drop. Show the connection error in the 01connect.t output, as well as any stuff that we automagically populated to get a connection. Update SIGNATURE in prep for RC2.

--- a/README
+++ b/README
@@ -133,6 +133,9 @@ result in extremely verbose output.
 When reporting test failures, please use TEST_VERBOSE=1, do *not* 
 set DBD_TRACE unless requested, and send only the relevant sections.
 
+If the first connection fails and DBI_DSN is not set, the tests may 
+attempt to connect as the user 'postgres' to the database 'postgres'. 
+See the t/dbdpg_test_setup.pl for the exact process.
 
 TROUBLESHOOTING:
 ----------------
