--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 2.0.0
+	- Allow objects with stringification overloading to work with quote().
+		(CPAN bug #32868) [David E. Wheeler and GSM]
 	- Make sure arrays handle UTF-8 smoothly (CPAN bug #32479) [GSM]
 	- Check transaction status after each command, to allow 
 		things such as 'PREPARE TRANSACTION' to work properly.
