--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 
 2.0.1
 
+	- Use version.pm [CPAN bug #33206] [GSM]
 	- Remove '//' style comments to make strict ANSI compilers happy.
 		(Trevor Inman) [CPAN bug #33089]
 
