--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 	- Use version.pm [CPAN bug #33206] [GSM]
 	- Remove '//' style comments to make strict ANSI compilers happy.
 		(Trevor Inman) [CPAN bug #33089]
+	- Force client encoding of UTF8 for some tests.
 	- Make 03dbmethod.t pass minor test for version 8.1.9
 		[CPAN bug #33282]
 
