Finish threaded Perl support.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
 2.0.1
 
 	- Use version.pm [CPAN bug #33206] [GSM]
+	- Add PERL_NO_GET_CONTEXT #define to improve performance on threaded Perls
 	- Remove '//' style comments to make strict ANSI compilers happy.
 		(Trevor Inman) [CPAN bug #33089]
 	- Force client encoding of UTF8 for some tests.
