--- a/TODO
+++ b/TODO
@@ -17,3 +17,4 @@ TODO:
 - Remove libpq dependency
 - Handle and/or better tests for different encoding, especially those not 
    supported as a server encoding (e.g. BIG5)
+- Make a CPAN bundle
