--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
 
 	- Use version.pm [CPAN bug #33206] [GSM]
 	- Add PERL_NO_GET_CONTEXT #define to improve performance on threaded Perls
+	- Raise the minimum DBI version to 1.52.
 	- Remove '//' style comments to make strict ANSI compilers happy.
 		(Trevor Inman) [CPAN bug #33089]
 	- Force client encoding of UTF8 for some tests.
