--- a/Changes
+++ b/Changes
@@ -1,27 +1,32 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.2.0
+2.2.1
+
+	- Fixed strlen problems in dbdimp.c (CPAN bug #33737)
+		[Alexey Tourbin]
+
+2.2.0 Released February 27, 2008 (subversion r10849)
 
 	- Introduced enhanced trace flags. See the documentation 
 		 on parse_trace_flags() for details. [GSM]
 	- Remove version.pm dependency from Makefile.PL
 		(CPAN bug #33429)
 
-2.1.3 Released February 20, 2008
+2.1.3 Released February 20, 2008 (subversion r10813)
 
 	- Do not assume POSTGRES_LIB is a plain dirname, as it may have " -lssl".
 
-2.1.2 Released February 19, 2008
+2.1.2 Released February 19, 2008 (subversion r10806)
 
 	- Do not build if environment variables POSTGRES_HOME, POSTGRES_LIB, 
 		or POSTGRES_INCLUDE are set but not valid.
 	- Fix dependency requirements, especially version.pm
 
-2.1.1 Released February 19, 2008
+2.1.1 Released February 19, 2008 (subversion r10798)
 
 	- Better URLs to cpan.org resources.
 
-2.1.0 Released February 18, 2008
+2.1.0 Released February 18, 2008 (subversion r10793)
 
 	- Use version.pm [CPAN bug #33206] [GSM]
 	- Add PERL_NO_GET_CONTEXT #define to improve performance on threaded Perls
@@ -34,7 +39,7 @@
 		[CPAN bug #33282]
 	- Add a local copy of dbivport.h
 
-2.0.0 Released February 10, 2008
+2.0.0 Released February 10, 2008 (subversion r10715)
 
 Major changes:
 
