--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@
 
 	- Add parse_trace_flag as statement handle method.
 
-2.2.1
+2.2.1 Released March 1, 2008 (subversion r10865)
 
 	- Fixed memory leaks in dbdimp.c (CPAN bug #33743)
 		[Alexey Tourbin]
