--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.2.2 Released March 3, 2008
+2.2.2 Released March 3, 2008 (subversion r10873)
 
 	- Remove non-working tracing from types.c and quote.c
 
