--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.3.0
+2.3.0 Released March 19, 2008 (subversion r10951)
 
 	- Add $sth->{pg_bound} and $sth->{pg_numbound} [GSM]
 	- Fix broken call to $sth->{pg_segments} [GSM]
