--- a/Changes
+++ b/Changes
@@ -18,17 +18,17 @@
 
 2.2.1 Released March 1, 2008 (subversion r10865)
 
-	- Fixed memory leaks in dbdimp.c (CPAN bug #33743)
+	- Fix memory leaks in dbdimp.c (CPAN bug #33743)
 		[Alexey Tourbin]
-	- Fixed strlen problems in dbdimp.c (CPAN bug #33737)
+	- Fix strlen problems in dbdimp.c (CPAN bug #33737)
 		[Alexey Tourbin]
-	- Fixed char count in Renew() (CPAN bug #33738)
+	- Fix char count in Renew() (CPAN bug #33738)
 		[Alexey Tourbin]
 	- Change local trace_flags to lowercase.
 
 2.2.0 Released February 27, 2008 (subversion r10849)
 
-	- Introduced enhanced trace flags. See the documentation 
+	- Introduce enhanced trace flags. See the documentation 
 		 on parse_trace_flags() for details. [GSM]
 	- Remove version.pm dependency from Makefile.PL
 		(CPAN bug #33429)
