--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.5.0 Released ??
+
+	- Add pg_enum_values to $dbh->column_info()
+		[Dave Rolsky] (CPAN ticket #34351)
+	- Minor test fixes.
+
 2.4.0 Released March 21, 2008 (subversion r10974)
 
 	- Remove problematic and unneeded Test::Warn test from 00basic.t.
