--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.5.1 Released April 7, 2008
+
+	- Correctly handle negative PID numbers on Win32 systems when
+		generating prepared statement names (CPAN bug # 34738) [GSM]
+
 2.5.0 Released March 23, 2008 (subversion r10990)
 
 	- Add pg_enum_values to $dbh->column_info()
