--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.5.2 Released April, 2008
+
+	- Fix minor build issue with Strawberry Perl [GSM]
+
 2.5.1 Released April 7, 2008 (subversion r11056)
 
 	- Correctly handle negative PID numbers on Win32 systems when
