Add all_bound to prevent looping through our placeholder list more than once per execute.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
 2.5.2 Released April, 2008
 
 	- Fix minor build issue with Strawberry Perl [GSM]
+	- Various performance improvements [GSM]
 
 2.5.1 Released April 7, 2008 (subversion r11056)
 
