Elevate pg_notifies to a real function. Add some real tests for LISTEN/NOTIFY. Instead of $dbh->func('pg_notifies')', you can simply say $dbh->pg_notifies;

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
 
 2.5.2 Released April, 2008
 
+	- Make pg_notifies a true function, so that you can now
+		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
 	- Fix minor build issue with Strawberry Perl [GSM]
 	- Various performance improvements [GSM]
 
