--- a/README
+++ b/README
@@ -5,7 +5,8 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 2.5.2 of DBD-Pg.  The web site for this interface is at:
+This is version 2.5.2 of DBD-Pg.  The web site for this interface, and 
+the latst vesion, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
 
@@ -17,36 +18,11 @@ The mailing list is at:
 
     http://www.nntp.perl.org/group/perl.dbd.pg/
 
-For further information about DBI look at:
-
-	http://dbi.perl.org/
-
 For information about PostgreSQL, visit:
 
 	http://www.postgresql.org/
 
 For information on what has changed for each version, see the Changes files.
-
-
-COPYRIGHT:
-----------
-
-	Copyright (c) 2002-2008 Greg Sabino Mullane and others: see the Changes file
-	Portions Copyright (c) 2002 Jeffrey W. Baker
-	Portions Copyright (c) 1997-2001 Edmund Mergl
-	Portions Copyright (c) 1994-1997 Tim Bunce
-
-You may distribute under the terms of either the GNU General Public
-License or the Artistic License, as specified in the Perl README file.
-
-
-HOW TO GET THE LATEST VERSION:
-------------------------------
-
-Use the following URL to look for new versions of this module: 
-
-http://search.cpan.org/dist/DBD-Pg/
-
 
 IF YOU HAVE PROBLEMS OR COMMENTS:
 ---------------------------------
@@ -65,8 +41,7 @@ the tests.
 BUG REPORTS
 -----------
 
-If you feel certain you have found a bug, you can file a bug report 
-by visiting:
+If you feel certain you have found a bug, you can file a bug report by visiting:
 http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 and selecting the "Report a new bug" link. Please check that the bug 
 has not already been reported first.
@@ -112,6 +87,9 @@ Now, take the usual steps to install DBD::Pg:
 
 Do steps 1 to 3 as a normal user, not as root!
 
+If the script cannot find the pg_config information itself, it will 
+ask you for the path to it. Enter the complete path to the pg_config 
+file here, including the name of the file itself.
 
 TESTING:
 --------
@@ -124,7 +102,7 @@ The easiest way to ensure this is to set the following environment variables:
 	DBI_PASS=<password>
 
 If you are running on a non-standard port, you must set PGPORT or 
-add it to the DBI_DSN variable like this:
+add the port to the DBI_DSN variable like this:
 
 	DBI_DSN='dbi:Pg:dbname=<database>;port=<port#>'
 
@@ -312,4 +290,15 @@ dbdimp.o -o blib/arch/auto/DBD/Pg/Pg.so -L/usr/local/pgsql/lib -lpq \
 
 Once this is done, 'make test' succeeds properly.
 (thanks to <jmore at remote-print.com>)
+
+COPYRIGHT:
+----------
+
+	Copyright (c) 2002-2008 Greg Sabino Mullane and others: see the Changes file
+	Portions Copyright (c) 2002 Jeffrey W. Baker
+	Portions Copyright (c) 1997-2001 Edmund Mergl
+	Portions Copyright (c) 1994-1997 Tim Bunce
+
+You may distribute under the terms of either the GNU General Public
+License or the Artistic License, as specified in the Perl README file.
 
