--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.5.2 Released April, 2008
+2.6.0 Released April 14, 2008
 
 	- Make pg_notifies a true function, so that you can now
 		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
