--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.0 Released April 16, 2008
+2.6.1
+
+
+2.6.0 Released April 16, 2008 (subversion r11095)
 
 	- Make pg_notifies a true function, so that you can now
 		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
