--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.1
+2.6.1 Released April 22, 2008
 
+	- Don't free placeholder section, fixes problem when using 
+		more than one named placeholder with the same name.
+		(CPAN bug #35303) [GSM]
 
 2.6.0 Released April 16, 2008 (subversion r11095)
 
