--- a/README
+++ b/README
@@ -112,6 +112,10 @@ or a space inside of it:
 
 	DBI_DSN='dbi:Pg:dbname="<data;base>"'
 
+If no valid connection is found, the tests will use the "initdb" 
+program to try and create a Postgres database cluster to test with.
+The first available port starting at 5440 will be used.
+
 You can increase the verbosity of the tests by setting the 
 environment variable TEST_VERBOSE. You can also enable tracing 
 within the tests themselves by setting DBD_TRACE to whatever 
