Fix for bug #35556: Calling pg_getcopydata into a new var segfaults. Thanks to David Harris for finding this and supplying a fix.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.2
+2.6.2 Released April 30, 2008
 
+	- Fix coredump when pg_getcopydata copies 0 rows into a 
+		freshly created var. (CPAN bug #35556) [David Harris]
 	- Allow 'make test' create a test database from scratch if
 		if it can't find an existing one to use. [GSM]
 
