--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.6.3 Released May 1, 2008
+
+	- Minor tweaks to the test suite.
+
 2.6.2 Released April 30, 2008 (subversion r11161)
 
 	- Fix coredump when pg_getcopydata copies 0 rows into a 
