--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.3 Released May 1, 2008
+2.6.3 Released May 1, 2008 (subversion r11169)
 
 	- Minor tweaks to the test suite.
 
