--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.4 Released May 2, 2008
+2.7.0 
+
+	- Support for standard_conforming_strings [GSM]
+
+2.6.4 Released May 2, 2008 (subversion r11186)
 
 	- More tweaks to the test suite.
 
