Note revision for 2.6.5

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.5 Released May 7, 2008
+2.7.0
+
+2.6.5 Released May 7, 2008 (subversion r11209)
 
 	- Add spell checker to tests. [GSM]
 	- More tweaks to the testing suite. [GSM]
