--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.6.6 Released May 7, 2008
+2.6.6 Released May 7, 2008 (subversion r11214)
 
 	- Fix minor problem in t/99_spellcheck.t
 
