Handle backslashes in quoting by using E'' when possible. Adjust tests for new E'' Flesh out quote() docs a bit. Don't track standard_conforming_strings at low-level anymore. Remove mention of pg_auto_escape parameter.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.7.0
+
+	- Have $dbh->quote() return E'' when server is >= 8.1
+		and string contains backslashes. Fixes any 
+		problems with standard_conforming_strings.
+		(CPAN bug #27538) [GSM]
+
 2.6.6 Released May 7, 2008 (subversion r11214)
 
 	- Fix minor problem in t/99_spellcheck.t
